
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 5 (rev 1844 - October 30, 2006)
====================================
* Added a README file for install and additional help resources (1844)
* Updated TinyMCE to 2.0.8 with additional config parameters (1843)
* [FS#578] Fix errors to install and manager when running MySQL in one of the STRICT sql_mode settings. (1830,1835)
* [FS#615] QuickEdit should no longer break on non-enlish languages with longer text strings (1825)
* [FS#614] Remove DisableCache from the install and add the disable cache functionality into the TemplateSwitcher plugin. (1818)
* [FS#598] Prevent files beginning with a dot (eg. '.svn') from being listed in the manager theme dropdown box. (1809)
* [FS#596] Fix missing quote in regClientCSS() function. (1808)
* Fix the checkDirt() js function for FF. No luck for Safari or Opera through lack of support in these browsers for the 'onbeforeunload' event. (1784)
* Minor cosmetic change to wait.static.php to make sectionHeader display position consistent with other files. (1784)
* [FS#588] Deprecated snippets removed from minimal template (no demo content).
* [FS#562] Removed ability to directly create folders from context menu in document tree. Makes interface consistent with the top menu options, and the options available as icons above the tree. Also prohibits this bug from occurring.
* [FS#595] Manager and Web User Settings column type for settings_value was too short - changed to text (1815)
* [FS#593] Green manager template CSS fix to restore context menu (1814) 
* [FS#603] Fixed non-escaped double-quote in manager language file (1813)
* [FS#609] Removed hard coded language strings from manager (1812)
* [FS#610] Manager username length increased from 15 to 100 characters (1811)
* [FS#612] Missing word in english language define (1810)