@@ -93,8 +93,8 @@ echo $cm->render();
 			<tr>
 			<td><a class="searchtoolbarbtn" href="index.php?a=116&cls=1"><img src="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>images/icons/delete.gif"  align="absmiddle" /> <?php echo $_lang['clear_log']; ?></a></td>
 			<td nowrap="nowrap">
-				<table border="0" style="float:right"><tr><td>Search </td><td><input class="searchtext" name="search" type="text" size="15" value="<?php echo $query; ?>" /></td>
-				<td><a href="javascript:;" class="searchbutton" title="<?php echo $_lang["search"];?>" onclick="searchResource();return false;">Go</a></td>
+				<table border="0" style="float:right"><tr><td><?php echo $_lang["search"]; ?> </td><td><input class="searchtext" name="search" type="text" size="15" value="<?php echo $query; ?>" /></td>
+				<td><a href="javascript:;" class="searchbutton" title="<?php echo $_lang["search"];?>" onclick="searchResource();return false;"><?php echo $_lang["go"]; ?></a></td>
 				<td><a href="javascript:;" class="searchbutton" title="<?php echo $_lang["reset"];?>" onclick="resetSearch();return false;"><img src="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>images/icons/refresh.gif" width="16" height="16"/></a></td>
 				<td><a href="javascript:;" class="searchbutton" title="<?php echo $_lang["list_mode"];?>" onclick="changeListMode();return false;"><img src="media/style/<?php echo $manager_theme ? "$manager_theme/":""; ?>images/icons/table.gif" width="16" height="16"/></a></td>
 				</tr>
