@@ -157,6 +157,17 @@ $_lang["database_name"] = 'Database name';
 $_lang["database_server"] = 'Database server';
 $_lang["database_tables"] = 'Database tables';
 $_lang["database_overhead"] = '<b style=\'color:#990033\'>Note:</b> Overhead is unused space reserved by MySQL. To free up this space, click on the table\'s overhead figure.';
+$_lang["database_table_clickhere"] = 'Click here';
+$_lang["database_table_clickbackup"] = 'to backup &amp; download the selected tables';
+$_lang["database_table_datasize"] = 'Data size';
+$_lang["database_table_droptablestatements"] = 'Generate DROP TABLE statements.';
+$_lang["database_table_effectivesize"] = 'Effective size';
+$_lang["database_table_indexsize"] = 'Index size';
+$_lang["database_table_overhead"] = 'Overhead';
+$_lang["database_table_records"] = 'Records';
+$_lang["database_table_tablename"] = 'Table name';
+$_lang["database_table_totalsize"] = 'Total size';
+$_lang["database_table_totals"] = 'Totals:';
 $_lang["date"] = 'Date';
 $_lang["datechanged"] = 'Date changed';
 $_lang["defaultcache_message"] = 'Select \'Yes\' to make all new documents cacheable by default.';
@@ -330,6 +341,7 @@ $_lang["friendly_alias_message"] = 'If you are using friendly URLs, and the docu
 $_lang["friendly_alias_title"] = 'Use friendly aliases:';
 $_lang["functionnotimpl"] = 'Sorry!';
 $_lang["functionnotimpl_message"] = 'This function has not been implemented yet.';
+$_lang["go"] = 'Go';
 $_lang["group_access_permissions"] = 'User group access';
 $_lang["guid"] = 'GUID';
 $_lang["help"] = 'Help';
@@ -361,6 +373,7 @@ $_lang["import_site_skip"] = '<span style="color:#990000">Skipped!</span>';
 $_lang["import_site_start"] = 'Start Import';
 $_lang["import_site_success"] = '<span style="color:#009900">Success!</span>';
 $_lang["import_site_time"] = 'Import finished. Import took %s seconds to complete.';
+$_lang["inbox"] = 'Inbox';
 $_lang["info"] = 'Info';
 $_lang["information"] = 'Information';
 $_lang["inline"] = 'Inline';
@@ -449,6 +462,25 @@ $_lang["meta_keywords"] = 'META Keywords';
 $_lang["mgr_access_permissions"] = 'Manager access permissions';
 $_lang["mgr_login_start"] = 'Manager Login Startup';
 $_lang["mgr_login_start_message"] = 'Enter the ID of the document you want to send the user to after he/she has logged into the manager. <b>NOTE: make sure the ID you\'ve enter belongs to an existing document, and that it has been published and is accessible by this user!</b>';
+$_lang["mgrlog_actionid"] = 'Action ID';
+$_lang["mgrlog_anyall"] = 'Any/All';
+$_lang["mgrlog_datefr"] = 'Date from';
+$_lang["mgrlog_dateto"] = 'Date to';
+$_lang["mgrlog_emptysrch"] = 'Your search query returned an empty result set (i.e. not matching logs found).';
+$_lang["mgrlog_field"] = 'Field';
+$_lang["mgrlog_itemid"] = 'Item ID';
+$_lang["mgrlog_itemname"] = 'Item name';
+$_lang["mgrlog_msg"] = 'Message';
+$_lang["mgrlog_query_msg"] = 'Please make a selection for viewing the logs. You can select log entries by date, but be aware that the dates you enter are not inclusive - to select every log entry for 01-01-2004, set \'date from\' to 01-01-2004 and \'date to\' to 02-01-2004.<br /><br />
+Message and action are usually the same. If you\'re searching for a specific message, it\'s best to set action to \'Any/All\'.';
+$_lang["mgrlog_results"] = 'No. of results';
+$_lang["mgrlog_sortinst"] = 'You can sort the table by clicking on the column headers. If the logs are becoming too large, you can <a href=\"index.php?a=55\">empty</a> the logs. This will remove all log entries up to now, and cannot be undone!';
+$_lang["mgrlog_query"] = 'Query logging';
+$_lang["mgrlog_time"] = 'Time';
+$_lang["mgrlog_user"] = 'User';
+$_lang["mgrlog_username"] = 'Username';
+$_lang["mgrlog_value"] = 'Value';
+$_lang["mgrlog_view"] = 'View manager logs';
 $_lang["modules"] = 'Modules';
 $_lang["module_code"] = 'Module code (php)';
 $_lang["module_config"] = 'Module configuration';
